// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Employees Reducer valid Oidc actions onSignInError 1`] = `
{
  "audiences": [],
  "errors": {
    "httpError": undefined,
    "signInError": [Error: unit tests],
    "silentRenewError": undefined,
  },
  "identity": undefined,
  "isExpired": false,
  "isExpiring": false,
  "isLoading": false,
  "isLoggedIn": false,
  "permissions": [],
  "userMetadata": undefined,
}
`;

exports[`Employees Reducer valid Oidc actions onSignOutPopup 1`] = `
{
  "audiences": [],
  "errors": {
    "httpError": undefined,
    "signInError": undefined,
    "silentRenewError": undefined,
  },
  "identity": undefined,
  "isExpired": false,
  "isExpiring": false,
  "isLoading": true,
  "isLoggedIn": false,
  "permissions": [],
  "userMetadata": null,
}
`;

exports[`Employees Reducer valid Oidc actions onUserFound 1`] = `
{
  "audiences": undefined,
  "errors": {
    "httpError": undefined,
    "signInError": undefined,
    "silentRenewError": undefined,
  },
  "identity": {
    "access_token": null,
  },
  "isExpired": false,
  "isExpiring": false,
  "isLoading": true,
  "isLoggedIn": true,
  "permissions": undefined,
  "userMetadata": undefined,
}
`;

exports[`Employees Reducer valid Oidc actions onUserLoading snapshot 1`] = `
{
  "audiences": [],
  "errors": {
    "httpError": undefined,
    "signInError": undefined,
    "silentRenewError": undefined,
  },
  "identity": undefined,
  "isExpired": false,
  "isExpiring": false,
  "isLoading": true,
  "isLoggedIn": false,
  "permissions": [],
  "userMetadata": undefined,
}
`;
